Day01/terragrunt-terraform-poc/modules/aws-vpc/main.tf
resource "aws_vpc" "this" {

  cidr_block = var.vpc_cidr

  enable_dns_hostnames = true
  enable_dns_support   = true


  tags = {
    Name = "${var.environment}-vpc"
  }
}


#############################
# Internet Gateway
#############################

resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id


  tags = {
    Name = "${var.environment}-igw"
  }
}


#############################
# Public Subnets
#############################

resource "aws_subnet" "public" {

  count = length(var.public_subnets)


  vpc_id = aws_vpc.this.id


  cidr_block = var.public_subnets[count.index]


  availability_zone = var.azs[count.index]


  map_public_ip_on_launch = true


  tags = {
    Name = "${var.environment}-public-${count.index + 1}"
  }
}



#############################
# Private Subnets
#############################

resource "aws_subnet" "private" {

  count = length(var.private_subnets)


  vpc_id = aws_vpc.this.id


  cidr_block = var.private_subnets[count.index]


  availability_zone = var.azs[count.index]


  tags = {
    Name = "${var.environment}-private-${count.index + 1}"
  }
}



#############################
# Public Route Table
#############################

resource "aws_route_table" "public" {


  vpc_id = aws_vpc.this.id


  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.this.id

  }


  tags = {
    Name = "${var.environment}-public-rt"
  }

}



resource "aws_route_table_association" "public" {


  count = length(var.public_subnets)


  subnet_id = aws_subnet.public[count.index].id


  route_table_id = aws_route_table.public.id

}



#############################
# NAT Gateway
#############################

resource "aws_eip" "nat" {

  domain = "vpc"


  tags = {
    Name = "${var.environment}-nat-eip"
  }

}



resource "aws_nat_gateway" "this" {


  allocation_id = aws_eip.nat.id


  subnet_id = aws_subnet.public[0].id


  tags = {
    Name = "${var.environment}-nat"
  }


}



#############################
# Private Route Table
#############################

resource "aws_route_table" "private" {


  vpc_id = aws_vpc.this.id



  route {

    cidr_block = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.this.id

  }


  tags = {

    Name = "${var.environment}-private-rt"

  }

}



resource "aws_route_table_association" "private" {


  count = length(var.private_subnets)


  subnet_id = aws_subnet.private[count.index].id


  route_table_id = aws_route_table.private.id

}
